--- a/package.json
+++ b/package.json
@@ -43,19 +43,20 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.22",
-    "@types/react": "^16.9.13",
-    "husky": "^3.0.9",
-    "np": "^5.1.3",
+    "@types/react": "^16.9.19",
+    "husky": "^4.2.1",
+    "np": "^5.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "tsdx": "^0.11.0",
+    "tsdx": "^0.12.3",
     "tslib": "^1.10.0",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.5"
   },
   "peerDependencies": {
     "react": "^16.12.0"
   },
   "dependencies": {
-    "electors": "^1.0.0-alpha.2"
+    "electors": "^1.0.0",
+    "suub": "^1.5.0"
   }
 }
