--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-electors",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0",
   "description": "A selector library using a React Hooks like API",
   "keywords": [],
   "homepage": "https://github.com/etienne-dldc/react-electors#readme",
