--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "test": "test"
   },
   "scripts": {
-    "build": "tsdx build --target web",
+    "build": "tsdx build",
     "lint": "tsdx lint",
     "pub": "yarn build && np",
     "start": "tsdx watch",
-    "test": "tsdx test --env=jsdom"
+    "test": "tsdx test --coverage",
+    "test:watch": "tsdx test --watch",
+    "typecheck": "tsc --noEmit"
   },
   "husky": {
     "hooks": {
@@ -42,21 +44,21 @@
     "trailingComma": "es5"
   },
   "devDependencies": {
-    "@types/jest": "^25.1.4",
-    "@types/react": "^16.9.23",
-    "husky": "^4.2.3",
-    "np": "^5.2.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "tsdx": "^0.12.3",
-    "tslib": "^1.11.1",
-    "typescript": "^3.8.3"
+    "@types/jest": "^26.0.7",
+    "@types/react": "^16.9.43",
+    "husky": "^4.2.5",
+    "np": "^6.3.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "tsdx": "^0.13.2",
+    "tslib": "^2.0.0",
+    "typescript": "^3.9.7"
   },
   "peerDependencies": {
     "react": "^16.12.0"
   },
   "dependencies": {
-    "electors": "^1.1.0",
-    "suub": "^2.0.3"
+    "electors": "^2.0.0",
+    "suub": "^3.0.1"
   }
 }
