--- a/example/package.json
+++ b/example/package.json
@@ -1,27 +1,27 @@
 {
   "name": "example",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
+  "main": "index.js",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "start": "parcel index.html"
   },
   "dependencies": {
-    "immer": "^7.0.9",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "suub": "^3.1.0"
+    "immer": "^8.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "suub": "^3.1.3"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "parcel": "^1.12.3",
+    "typescript": "^4.1.3"
   },
   "alias": {
     "react": "../node_modules/react",
     "react-dom": "../node_modules/react-dom/profiling",
     "scheduler/tracing": "../node_modules/scheduler/tracing-profiling"
-  },
-  "devDependencies": {
-    "@types/react": "^16.9.52",
-    "@types/react-dom": "^16.9.8",
-    "parcel": "^1.12.3",
-    "typescript": "^4.0.3"
   }
 }
